
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:stretchColumns="0,1,2,3" >

    <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/numeroRomano1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />

            <TextView
                android:id="@+id/NumeroRomano2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />

            <TextView
                android:id="@+id/resultadoRomano"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/numero1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />

            <TextView
                android:id="@+id/numero2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />

            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="30"
                android:background="#ffff99"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:text="" />
        </TableRow>
        
    </TableLayout>
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:stretchColumns="0,1,2,3" >

        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/simbolo1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/simbolo2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/simbolo3" />

            <Button
                android:id="@+id/btnclc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/clear" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simbolo4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simbolo5" />

            <Button
                android:id="@+id/btnigual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Simbolo_igual" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simbolo7" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simbolo6" />

            <Button
                android:id="@+id/btnsuma"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Simbolo_suma" />
        </TableRow>
    </TableLayout>

</LinearLayout>
 










